--- a/utils/config.conf
+++ b/utils/config.conf
@@ -1,11 +1,12 @@
 [section1]
 baseurl = http://localhost:4723/wd/hub
-statusUrl = http://localhost:4723/wd/hub/status
-logPath = E:\Test\AutoTest\Log
-xmlPath = E:\Test\AutoTest\Xml
-picDpath = E:\Test\AutoTest\Pic\Dpath\
-picSPath = E:\Test\AutoTest\Pic\Spath\
-com = COM3
+statusurl = http://localhost:4723/wd/hub/status
+xmlpath = C:\RFAUtils\AutoTest\Xml
+logpath = C:\RFAUtils\AutoTest\Log
+appium_run_log_path = C:\RFAUtils\AutoTest\Log\appium_run_log\
+picdpath = C:\RFAUtils\AutoTest\Pic\Dpath\
+picspath = C:\RFAUtils\AutoTest\Pic\Spath\
+com = COM4
 baud = 115200
 serial_timeout = 2
-[keycode]
+
